Add mobile layout to Header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,5 +5,34 @@ header {
     padding-top: 30px;
     padding-bottom: 30px;
     box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    
+    gap: 50px;
+}
+
+
+.mobileMenuButton {
+    display: none;
+}
+
+
+
+@media screen and (max-width: 1000px) {
+    .mobileMenuButton {
+        display: block;
+        background: none;
+        border: none;
+
+        img {
+            width: 30px;
+        }
+    }
+
+    header {
+        justify-content: space-between;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    header > .requestButton {
+        display: none;
+    }
 }
