--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,11 +1,49 @@
 ul {
-    display: flex;
-    gap: calc(2rem + 3vw)
-    
+  display: flex;
+  gap: calc(2rem + 3vw);
 }
 
 a {
-    color: var(--grayishBlue);
-    text-decoration: none;
-    font-size: 1.6rem;
+  color: var(--grayishBlue);
+  text-decoration: none;
+  font-size: 1.6rem;
+}
+
+.closeMenu {
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  nav {
+    visibility: hidden;
+  }
+
+  nav.active {
+    visibility: visible;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+
+    .closeMenu {
+      display: block;
+      background: none;
+      border: none;
+      position: absolute;
+      top: 30px;
+      right: 60px;
+    }
+  }
 }
