--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,6 +7,11 @@ a {
   color: var(--grayishBlue);
   text-decoration: none;
   font-size: 1.6rem;
+  
+  &:hover {
+    border-bottom: 3px solid;
+    border-image: linear-gradient(45deg, var(--limeGreen), var(--brightCyan)) 1;
+  }
 }
 
 .closeMenu {
@@ -32,7 +37,7 @@ a {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      height: 50%;
       padding-top: 20px;
       padding-bottom: 20px;
     }
