--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@ header {
     padding-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     gap: 50px;
+    background-color: var(--white);
 }
 
 
