--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,4 +3,5 @@
 @import "./base/reset.css";
 @import "../components/Header/Header.css";
 @import "../components/NavBar/NavBar.css";
-@import "../components/RequestButton/RequestButton.css"
+@import "../components/RequestButton/RequestButton.css";
+@import "../components/Hero/Hero.css"
