Create FeatureContainer component

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,4 +4,5 @@
 @import "../components/Header/Header.css";
 @import "../components/NavBar/NavBar.css";
 @import "../components/RequestButton/RequestButton.css";
-@import "../components/Hero/Hero.css"
+@import "../components/Hero/Hero.css";
+@import "../components/FeatureContainer/FeatureContainer.css"
