--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,4 +5,5 @@
 @import "../components/NavBar/NavBar.css";
 @import "../components/RequestButton/RequestButton.css";
 @import "../components/Hero/Hero.css";
-@import "../components/FeatureContainer/FeatureContainer.css"
+@import "../components/FeatureContainer/FeatureContainer.css";
+@import "../components/FeatureBox/FeatureBox.css"
