--- a/src/components/FeatureBox/FeatureBox.css
+++ b/src/components/FeatureBox/FeatureBox.css
@@ -1,3 +1,10 @@
+.featureBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start
+}
+
 .promoSvg, .promoTitle {
     margin-bottom: 20px;
 }
@@ -15,7 +22,18 @@
 }
 
 @media screen and (max-width: 1100px) {
+
     .featureBox {
-        width: 85%;
+        justify-content: center;
+        align-items: center;
+    }
+    .promoText {
+        font-size: 18px;
+    }
+}
+
+@media screen and (600px < width < 1100px) {
+    .promoText {
+        width: 75%;
     }
 }
