--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -58,13 +58,13 @@
     align-items: center;
     text-align: center;
     gap: 30px;
-    padding: 30px;
+    padding: 30px 30px 80px 30px;
   }
 
   .hero > div:nth-child(2) {
     display: flex;
     justify-content: center;
-    margin-bottom: -275px; 
+    margin-bottom: -250px; 
     padding: 0px 20px 0px 20px;
 
     .contentImage {
