Create Footer and style

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -9,3 +9,4 @@
 @import "../components/FeatureBox/FeatureBox.css";
 @import "../components/ArticleContainer/ArticleContainer.css";
 @import "../components/ArticleBox/ArticleBox.css";
+@import "../components/Footer/Footer.css"
