--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -30,6 +30,10 @@ footer {
   }
 }
 
+.socialIcon {
+  margin: 24px 5px 0px 5px;
+  cursor: pointer;
+}
 @media screen and (max-width: 1150px) {
   footer {
     flex-direction: column;
